# Modern_Cpp_For_Computer_Vision

./: .gitignore
src/igg_image/: CMakeLists.txt  image.cpp  image.h  rgb_image.cpp  rgb_image.h
src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp  ppm_strategy.h
tests/: CMakeLists.txt  image_test.cpp  ppm_strategy_test.cpp
